--- a/index.html
+++ b/index.html
@@ -1,64 +1,73 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
+    <link rel="icon" href="/img/favicon.png" type="image/x-icon" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link href="./styles.css" />
+    <title>feliz cumpleaños</title>
+
+    <!-- Fuente -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
-      crossorigin="anonymous"
     />
-    <title>Happy birthday</title>
+
+    <!-- CSS propio -->
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <main class="container my-5" id="background">
+    <main>
+      <!-- Splash -->
       <div id="splash"></div>
-      <div class="text-center mb-4">
-        <h1>Happy birthday!</h1>
-        <h2>“A las 11:11”</h2>
-        <p class="lead">
+
+      <!-- Contenido -->
+      <div id="contenido" class="container text-white text-center py-5">
+        <h1 class="mb-4">“A las 11:11”</h1>
+        <p class="mb-4">
           A las 11:11 el mundo se detiene, los relojes suspiran, el aire
           contiene. Y entre el ruido del día y la calma del cielo, tu nombre
           aparece, ligero y sincero.
         </p>
-        <p class="lead">
+        <p>
           Dicen que es hora de pedir un deseo, pero yo no pido — ya te tengo en
           mi tiempo. Porque cada vez que el uno se repite, mi pecho recuerda lo
           que me hiciste.
         </p>
-        <p class="lead">
+        <p>
           No sé si es magia o simple coincidencia, pero tu mirada rompió mi
           paciencia. Y cada 11:11, sin querer pensarte, mi alma te busca, sin
           poder llamarte.
         </p>
-        <p class="lead">
+        <p>
           Así que si alguna vez ves la hora y sonríes, sabé que en silencio,
           también te escribí. Que aunque el reloj siga, mi mente persiste, en
-          ese minuto donde vos existís.
+          ese minuto donde vos existís. 💖
         </p>
-      </div>
-      <div class="player">
-        <button class="btn-player" id="prev">⏮</button>
-        <button class="btn-player" id="play">▶</button>
-        <button class="btn-player" id="next">⏭</button>
-        <span id="song-title">Sin canción</span>
+        <!-- 🎶 Reproductor -->
+        <div class="player">
+          <button class="btn-player" id="prev">⏮</button>
+          <button class="btn-player" id="play">▶</button>
+          <button class="btn-player" id="next">⏭</button>
+          <span id="song-title">Sin canción</span>
 
-        <!-- Audio invisible -->
-        <audio id="audio"></audio>
+          <!-- Audio invisible -->
+          <audio id="audio"></audio>
 
-        <div class="progress" id="progress">
-          <div class="progress-bar" id="progress-bar"></div>
+          <div class="progress" id="progress">
+            <div class="progress-bar" id="progress-bar"></div>
+          </div>
         </div>
       </div>
     </main>
+    <!-- JS propio -->
     <script src="./player.js"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-      crossorigin="anonymous"
-    ></script>
+    <!-- Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
